# crl_opi

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: opi_detection_node.hpp  opi_localization_node.hpp  opi_tracker_node.hpp
launch/: commander.launch.py  opi.launch.py
msg/: TrackedPose.msg  TrackedPoseArray.msg
scripts/: README.md  data_generator.py  process_datasets.py  pyproject.toml  train.py  train_adr_panel_detector.py
src/: opi_detection_node.cpp  opi_localization_node.cpp  opi_tracker_node.cpp
